--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "description": "Una web app para seleccionar tus shows favoritos",
   "version": "0.1.0",
   "dependencies": {
+    "express": "^4.13.4",
     "jquery": "^2.1.4",
     "page": "^1.6.4",
-    "qs": "^6.0.0",
-    "serve": "^1.4.0"
+    "qs": "^6.0.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.1.18",
@@ -15,9 +15,10 @@
   },
   "scripts": {
     "public": "mkdir -p public",
-    "build-js": "NODE_PATH=. browserify -t [ babelify --presets [ es2015 ] ] src/index.js > public/app.js",
-    "copy-files": "cp src/index.css public/app.css && cp src/index.html public/index.html",
+    "build-js": "NODE_PATH=. browserify -t [ babelify --presets [ es2015 ] ] src/client/index.js > public/app.js",
+    "copy-files": "cp src/client/index.css public/app.css && cp src/client/index.html public/index.html",
     "build": "npm run public && npm run build-js && npm run copy-files",
-    "serve": "serve public"
+    "serve": "node src/server",
+    "start": "npm run build && npm run serve"
   }
 }
