--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tvify",
-  "description": "Una web app para seleccionar tus shows favoritos",
-  "version": "0.1.0",
+  "name": "school",
+  "description": "",
+  "version": "0.0.1",
   "dependencies": {
     "babel-preset-es2015": "^6.1.18",
     "babel-cli": "^6.9.0",
@@ -19,7 +19,7 @@
     "build-js": "NODE_PATH=. browserify -t [ babelify --presets [ es2015 ] ] src/client/index.js > public/app.js",
     "copy-files": "cp src/client/index.css public/app.css && cp src/client/index.html public/index.html",
     "build": "npm run public && npm run build-js && npm run copy-files",
-    "serve": "babel-node src/server --presets es2015",
+    "serve": "NODE_PATH=. babel-node src/server --presets es2015",
     "start": "npm run build && npm run serve"
   }
 }
