--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "description": "",
   "version": "0.0.1",
   "dependencies": {
-    "babel-preset-es2015": "^6.1.18",
     "babel-cli": "^6.9.0",
+    "babel-preset-es2015": "^6.1.18",
     "express": "^4.13.4",
     "jquery": "^2.1.4",
+    "mongoose": "^4.4.17",
     "page": "^1.6.4",
     "qs": "^6.0.0"
   },
